integrates mosaicmaker with google photos (still need to fix aspect ratio) factors out some common code into util

--- a/config-sample.json
+++ b/config-sample.json
@@ -9,7 +9,7 @@
     },
     {
       "kind": "google",
-      "path": "albumnName",
+      "path": "albumName",
       "options": "token.json"
     }
   ]
